# pqc-system

./: Cargo.toml  plan.org
crates/pqc-bench/: Cargo.toml
crates/pqc-bench/benches/: ntt_comparison.rs
crates/pqc-bench/src/: lib.rs
crates/pqc-kyber/: Cargo.toml
crates/pqc-kyber/src/: lib.rs  params.rs
crates/pqc-math/: Cargo.toml
crates/pqc-math/benches/: ntt_benchmark.rs  saved_bench.txt  simd_benchmark.rs
crates/pqc-math/src/: lib.rs  modular.rs  params.rs
crates/pqc-math/src/ntt/: basic.rs  mod.rs  polyhedral_simd_ntt.rs  simd_plan.org  trait_def.rs  true_simd.rs  unrolled.rs
notes/: ntt_desc.md  ntt_desc.org
src/: main.rs
