[workspace]
members = ["crates/pqc-math", "crates/pqc-kyber", "crates/pqc-bench"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Maxim"]

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[package]
name = "pqc-system"
version.workspace = true
edition.workspace = true

[dependencies]
pqc-kyber = { path = "crates/pqc-kyber" }
pqc-math = { path = "crates/pqc-math" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
