[workspace]
members = ["crates/pqc-math", "crates/pqc-kyber"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Maxim"]

[package]
name = "pqc-system"
version.workspace = true
edition.workspace = true

[dependencies]
pqc-kyber = { path = "crates/pqc-kyber" }
pqc-math = { path = "crates/pqc-math" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
